docs mint page - profile & header

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -4,11 +4,10 @@
   display: flex;
 }
 
-.MintCard {
-  margin-top: 100px;
-  /* background-color: brown; */
-}
-
-.FreeSale {
-  /* background-color: blue; */
+.MintCard{
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  height: 100vh;
+  flex-direction: column;
 }
