--- a/front/src/App.css
+++ b/front/src/App.css
@@ -27,6 +27,7 @@
   width: 100%;
   height: 100%;
   background: rgb(172, 237, 144);
+  padding: 10px 0px;
 }
 
 .freelist {
@@ -35,4 +36,35 @@
   background-color: rgb(161, 191, 236);
   width: 100%;
   height: 100%;
+  padding: 10px 0px;
+}
+
+.nav-item {
+  color: white;
+  text-decoration: none;
+  margin-left: 30px;
+  display: flex;
+}
+
+.upload-img {
+  display: none;
+}
+
+.upload-btn-box, .create-btn-box {
+  margin: 0 0 10px 0;
+}
+
+.upload-btn, .create-btn {
+  width: 120px;
+  border-radius: 10px;
+}
+
+.upload-btn:hover, .create-btn:hover {
+  background-color: rgb(145, 245, 212);
+  font-weight: bold;
+}
+
+.modal-open {
+  width: 100%;
+  height: 8%;
 }
