--- a/front/src/App.css
+++ b/front/src/App.css
@@ -102,3 +102,15 @@ body {
   width: 100%;
   height: 8%;
 }
+
+.ButtonGroup{
+  /* padding: 10px; */
+  padding: auto;
+  margin: 10px;
+}
+
+.button-group{
+  padding: auto;
+  margin: 10px;
+
+}
