--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,3 +1,10 @@
+body {
+  width: 100%;
+  height: 100%;
+  /* background: linear-gradient(to right, black, transparent); */
+  background: linear-gradient(90deg, #B15497 0.51%, #B15497 0.52%, #B15497 37.46%, #B15497 37.47%, #9DD2B0 100%);
+}
+
 .mint-container {
   background-color: rgb(26, 126, 213);
   width: 100%;
@@ -21,12 +28,12 @@
   margin: 10px 0;
 }
 
-.whitelist {
+/* .whitelist {
   display: flex;
   justify-content: center;
   height: 100vh;
   flex-direction: column;
-}
+} */
 
 
 .FreeSale {
@@ -59,11 +66,18 @@
   padding: 10px 0px;
 }
 
+.nav {
+  background: #ffffff;
+  opacity: 70%;
+}
+
 .nav-item {
-  color: white;
+  color: black;
   text-decoration: none;
   margin-left: 30px;
   display: flex;
+  font-weight: bolder;
+  font-size: 20px;
 }
 
 .upload-img {
