--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,8 +1,9 @@
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   /* background: linear-gradient(to right, black, transparent); */
-  background: linear-gradient(90deg, #B15497 0.51%, #B15497 0.52%, #B15497 37.46%, #B15497 37.47%, #9DD2B0 100%);
+  background: linear-gradient(90deg, #deb38d 0.51%, #deb38d 0.52%, #deb38d 37.46%, #deb38d 37.47%, #9DD2B0 100%);
 }
 
 .mint-container {
@@ -35,6 +36,16 @@ body {
   flex-direction: column;
 } */
 
+.main-container {
+  display: flex;
+  /* flex-wrap: wrap; */
+}
+
+.main-col {
+  /* background: blue; */
+  /* position: relative; */
+  margin-right: 30%;
+}
 
 .FreeSale {
   /* background-color: blue; */
