commit Vote 마무리

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -223,3 +223,12 @@ body {
   margin: 10px;
 
 }
+
+.cardclass{
+  margin: 10px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+
+
+}
