--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,12 +1,8 @@
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  /* background-image: url('./img/chocolate/choco1.png'); */
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
+  /* overflow-x: hidden; */
   background: linear-gradient(90deg, #deb38d 0.51%, #deb38d 0.52%, #deb38d 37.46%, #deb38d 53.47%, #f6f698 100%);
-  /* background-blend-mode: multiply; */
 }
 .backG-left-img {
   position: absolute;
@@ -87,13 +83,21 @@ body {
   /* background-color: red; */
 }
 
+.main-button-container {
+  position: relative;
+  /* top: 50%; */
+}
+
 .main-col {
   /* background: blue; */
-  /* position: relative; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  position: relative;
   /* margin-right: 30%; */
 }
 
 .main-img-col {
+  /* background-color: #f6f698; */
   display: flex;
   flex-direction: row;
   padding-top: 130px;
