--- a/front/src/App.css
+++ b/front/src/App.css
@@ -35,11 +35,6 @@ body {
   justify-content: center;
 }
 
-.MintCard {
-  margin-top: 100px;
-  /* background-color: brown; */
-}
-
 
 .profile-inner {
   width: 80%;
@@ -286,11 +281,11 @@ body {
 }
 
 .cardnft{
-  margin: 20px;
-  background-color: green;
-  width: 40%;
-  height: 400px;
-  
+  /* display: flex; */
+  /* text-align: center; */
+  /* justify-content: center; */
+  width: 100%;
+  height: 100%;
 }
 
 .father{
@@ -301,4 +296,7 @@ body {
 
 .CardGroup{
   width: 100%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
 }
