--- a/front/src/App.css
+++ b/front/src/App.css
@@ -15,6 +15,18 @@ body {
   z-index: -1;
 }
 
+.backG-right-img {
+  position: absolute;
+  right: 13%;
+  top: -4%;
+  z-index: -4
+}
+.backG-right-img2 {
+  position: absolute;
+  right: -5%;
+  /* top: -4%; */
+  /* z-index: -4 */
+}
 /* .main-outer {
   width: 100%;
   height: 120%;
