--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,7 +1,7 @@
 body {
   width: 100%;
   height: 100%;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   background: linear-gradient(90deg, #deb38d 0.51%, #deb38d 0.52%, #deb38d 37.46%, #deb38d 53.47%, #f6f698 100%);
 }
 .backG-left-img {
