--- a/front/src/App.css
+++ b/front/src/App.css
@@ -331,6 +331,7 @@ body {
   border: 4px solid brown;
   padding: 10px 8px 10px 6px;
   background-color: white;
+  z-index: 2;
 }
 .swap-select, .swap-amount-input {
   margin-bottom: 10px;
