--- a/front/src/App.css
+++ b/front/src/App.css
@@ -353,13 +353,15 @@ NftCard
 */
 
 #stake-checkbox {
-  position: absolute;
+  position: relative;
   /* top: 70px; */
   /* right: -240px; */
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 35px;
   z-index: 2;
-  transform: translate(600%, 100%)
+  top: 20px;
+  margin-top: -15.8%;
+  /* transform: translate(50%, 50%) */
 }
 
 .nftcard-header {
