--- a/front/src/App.css
+++ b/front/src/App.css
@@ -321,31 +321,73 @@ body {
   justify-content: center;
 }
 
+/*swap*/
+.swap-header {
+  font-weight: 600;
+  font-size: 40px;
+}
+
 .select-box {
-  width: 20%;
+  width: 400px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
   margin-top: 10%;
-  border: 4px solid brown;
+  /* border: 4px solid black; */
   padding: 10px 8px 10px 6px;
   background-color: white;
+  border-radius: 30px;
   z-index: 2;
 }
+.swap-select {
+  /* background-color: red; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swap-body{ 
+  font-weight: 600;
+  /* background: red; */
+  width: 100px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+
 .swap-select, .swap-amount-input {
   margin-bottom: 10px;
 }
 .swapL-select, .swapR-select {
   width: 30%;
+  text-align: end;
 }
 .swap-box {
   display: flex;
+  /* width: 400px; */
   justify-content: center;
 }
 .swap-submit {
   /* width: 40%; */
   /* background-color: red; */
+}
+.swap-token-icon {
+  cursor: pointer;
+  margin: 0px 20px;
+  width: 20px;
+  height: 20px;
+}
+.swap-token-icon:hover {
+  transform: scale(1.2);
+}
+.klay-icon {
+  width: 30px;
+  margin: 0px 10px;
+}
+.brownie-icon { 
+  width: 33px;
+  height: 45px;
+  margin: 0px 10px;
 }
 
 /*
