--- a/front/src/App.css
+++ b/front/src/App.css
@@ -339,12 +339,14 @@ body {
   background-color: white;
   border-radius: 30px;
   z-index: 2;
+
 }
 .swap-select {
   /* background-color: red; */
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 .swap-body{ 
   font-weight: 600;
@@ -355,9 +357,6 @@ body {
   align-items: center;
 }
 
-.swap-select, .swap-amount-input {
-  margin-bottom: 10px;
-}
 .swapL-select, .swapR-select {
   width: 30%;
   text-align: end;
@@ -388,6 +387,38 @@ body {
   width: 33px;
   height: 45px;
   margin: 0px 10px;
+}
+
+.swap-amount-input, .swap-exchange {
+  width: 140px;
+  font-size: 17px;
+  border-radius: 4px;
+  border: 3px solid black;
+  text-align: center;
+  font-weight: bold;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.swap-amount-input-box {
+  margin-bottom: 15px;
+  /* background-color: red; */
+}
+
+.swap-amount-inner {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.swap-arrow {
+  width: 30px;
+}
+
+.swap-text {
+  font-size: 12px;
+  /* color:blue */
+  font-weight: bold;
 }
 
 /*
