rename : brownie to browny

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -430,7 +430,7 @@ body {
   width: 30px;
   margin: 0px 10px;
 }
-.brownie-icon { 
+.browny-icon { 
   width: 33px;
   height: 45px;
   margin: 0px 10px;
