feat: staking pagination

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -486,6 +486,9 @@ body {
 
 /*Pagination*/
 .pageA {
+  /* background-color: red; */
+  display: flex;
+  justify-content: center;
   margin-top: 30px;
 }
 
