feat: stake css

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -489,11 +489,14 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 30px;
+  background:#854207;
 }
-
 /*
 NftCard
 */
+.stake-header {
+  margin-bottom: 45px;
+}
 .myNFT-info-box {
   display: flex;
   justify-content: flex-end;
@@ -534,7 +537,7 @@ NftCard
   text-align: center;
   font-weight: bolder;
   font-size: 40px;
-  margin: 10px 0 20px 0;
+  /* margin: 10px 0 20px 0; */
 }
 
 .card-container {
