fix : minting count least 1

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -221,7 +221,7 @@ body {
 .mint-img-container{
   width: 220px;
   height: 232px;
-  background-color: rgb(144, 214, 32);
+  background-color: white;
   margin-bottom: 20px;
   border-radius: 8px;
 }
