--- a/front/src/App.css
+++ b/front/src/App.css
@@ -2,7 +2,7 @@ body {
   width: 100%;
   /* height: 100%; */
   overflow-x: hidden;
-  background: linear-gradient(90deg, #deb38d 0.51%, #deb38d 0.52%, #deb38d 37.46%, #deb38d 53.47%, #f6f698 100%);
+  background: linear-gradient(90deg, #e9a667 0.52%, #f0e3a1 39.46%, #f0e3a1 70.47%, #e9a667 90%);
 }
 
 .wrapper {
@@ -495,6 +495,7 @@ body {
 /*
 NftCard
 */
+
 .nftlist-select-all-button:hover{
   background-color: lightgray;
   transform: scale(1.05);
@@ -539,7 +540,7 @@ NftCard
 .stake-outer-box {
   display: flex;
   /* flex-direction: row; */
-  /* background-color: red; */
+  background-color: lightgray;
   width: 100%;
 }
 
@@ -551,6 +552,7 @@ NftCard
   height: 35px;
   z-index: 2;
   top: 20px;
+  left: 10px;
   margin-top: -15.0%;
   /* transform: translate(50%, 50%) */
 }
@@ -562,9 +564,10 @@ NftCard
   /* margin: 10px 0 20px 0; */
 }
 
-.card-container {
-  /* background-color: rgb(205, 49, 49); */
-}
+/* .card-container {
+  border-radius;
+  background-color:  #f05385;
+} */
 
 .reward-box {
   /* background-color: red; */
