--- a/front/src/App.css
+++ b/front/src/App.css
@@ -573,13 +573,13 @@ NftCard
 }
 .myNFT-info-box {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   /* background-color: blue; */
   /* display: flex; */
   /* justify-content: center; */
 }
 .nftlist-outer {
-  margin-top: 15%;
+  margin-top: 4%;
 }
 .stake-box {
   width: 100%;
@@ -592,6 +592,7 @@ NftCard
   display: flex;
   /* flex-direction: row; */
   background-color: lightgray;
+  opacity: 0.9;
   width: 100%;
 }
 
@@ -604,7 +605,7 @@ NftCard
   z-index: 2;
   top: 20px;
   left: 10px;
-  margin-top: -15.0%;
+  margin-top: -19.0%;
   /* transform: translate(50%, 50%) */
 }
 
@@ -637,6 +638,203 @@ NftCard
   margin-left: 2%;
   font-size: 18px;
 }
+
+    .Main {
+        width: 31.25rem;
+        min-height: 54.6875rem;
+        margin: .625rem;
+        border: .1875rem solid white;
+        border-radius: 2.5rem;
+        padding: .625rem .625rem;
+        background: #F5FADB;
+        /* background: radial-gradient(transparent, #FFF9F9); */
+        /* background: linear-gradient(to right, #d78034 0%, transparent 50%, #d78034 100%); */
+        /* background: #6e3503; */
+    }
+
+    .InnerMain {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    .Ncard {
+        opacity: 0.9;
+        padding: .1875rem;
+        margin: .625rem;
+        margin-left: 1.6875rem;
+        padding-top: 1.5625rem;
+        border-radius: 12.5rem;
+        text-align: center;
+        cursor: pointer;
+        /* background: #4f86f7; */
+        /* background: #464196  */
+    }
+
+    .Ncard:hover {
+        opacity: 1;
+    }
+
+    .card:hover {
+        opacity: 1;
+        transform :scale(1.1);
+    }
+
+    .card:hover  button{
+        opacity: 1.0;
+    }
+
+    .nftcardbutton{
+        position: relative;
+        display: flex ;
+        justify-content: center ;
+        bottom: 12.5rem;
+    }
+
+    .spaan {
+        background-color: pink ;
+        opacity: 0;
+    }
+
+    .containerCard {
+        width: 100%;
+        height: 100%;
+        background-color: gray;
+        border-radius: 8px;
+    }
+
+    .col_1 {
+        color: blue;
+    }
+
+    .col_2 {
+        color: pink;
+    }
+
+    .width1 {
+        width: 100% ;
+    }
+    .width2 {
+        width: 100% ;
+    }
+
+    .rel{
+        background-color: red;
+        position: absolute;
+        transform: translate(150%, 150%);
+    }
+
+    .cont21 {
+        display: flex ;
+        justify-content: center;
+        margin: .625rem 0rem;
+        padding-bottom: .625rem;
+        border-bottom: .0625rem solid black;
+    }
+
+    .nftlist {
+        text-align: center;
+        border-radius: .1875rem;
+        border-top-left-radius: .625rem;
+        border-bottom-right-radius: .625rem;
+        width: 80%;
+        padding: .3125rem;
+        background: lightgray;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .nftlist-id-box {
+        width: 5rem;
+        margin: .1875rem .25rem;
+        background: white;
+        border-radius: 1.875rem;
+        font-size: .9375rem;
+        text-align: center;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .nftlist-id-box:hover {
+        transform: scale(1.1);
+    }
+
+    .nftlist-header {
+        font-size: 1.5625rem;
+        padding-left: 4.375rem;
+        margin-bottom: 1.25rem;
+    }
+    .nftlist-text {
+        text-align: center;
+        border-radius: .1875rem;
+        width: 80%;
+        padding: .3125rem;
+        background: lightgray;
+    }
+
+    .nftlist-box {
+        margin: 0rem 1.875rem;
+    }
+
+    .nftlist-justify {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1.25rem;
+    }
+
+    .nftlist-cancel {
+        width: 2.5rem;
+        height: 2.5rem;
+    }
+
+    .overlay {
+        position: absolute;
+        opacity: 0;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        transform: translate(1.375rem, -2.0625rem);
+    }
+
+    .nftlist-id-box:hover .overlay{
+        position: absolute;
+        opacity: 1;
+    }
+
+    .nftlist-select-all {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: .3125rem;
+        margin-right: 3.125rem;
+        align-items: center;
+    }
+    
+    .nftlist-select-all-button {
+        border-radius: .625rem;
+        cursor: pointer;
+    }
+
+    .nftlist-select-all-text {
+        margin-top: .625rem;
+        background: blue;
+    }
+
+    .nftlist-select-all-checkbox {
+        margin-right: .1875rem;
+    }
+
+    .nftlist-card-img {
+        border-radius: 5rem;
+    }
+
+    .no-display {
+        position: absolute;
+        transform: translate(3.4375rem, 24.0625rem);
+    }
+
+
+/*main slide animation*/
 
 .slidediv {
   font-size: 7em;
