--- a/front/src/App.css
+++ b/front/src/App.css
@@ -409,7 +409,7 @@ body {
   background-color: white;
   border-radius: 30px;
   z-index: 2;
-  box-shadow: 7px 7px;
+  box-shadow: rgb(193, 192, 192) 7px 7px;
 }
 
 .swap-select {
