--- a/front/src/App.css
+++ b/front/src/App.css
@@ -930,11 +930,15 @@ NftCard
     7px 7px 0px rgba(0, 0, 0, 0.2);
 }
 
-.refresh-reward-icon {
+.refresh-reward-icon, .change-nickname-icon{
   cursor: pointer;
   margin: 0px 10px;
   width: 20px;
   height: 20px;
+}
+
+.change-nickname-icon {
+  animation-duration: 3s;
 }
 
 @keyframes slide {
