modify : for alternate pages

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1187,3 +1187,12 @@ th {
   border-radius: 20px;
   padding: 10px;
 }
+
+/* noPage */
+.no-page {
+  position: relative;
+  top: 25rem;
+  display: flex;
+  justify-content: center;
+  font-size: 80px;
+}
