--- a/front/src/App.css
+++ b/front/src/App.css
@@ -163,6 +163,10 @@ body {
 }
 
 @media (max-width: 970px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+ 
   .main-container {
     display: flex;
     flex-direction: column;
@@ -171,15 +175,28 @@ body {
   .main-img-col {
     margin-top: 120px;
   }
+  .nav-item {
+    background: white;
+    border-radius: 20px;
+    border-bottom: 1px solid black;
+  }
+  #navbarScroll {
+    /* display: none; */
+  }
 
   .info-box {
     position: absolute;
     /* left: 10%; */
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     margin-right: 25%;
-    width: 40%;
+    width: 260px;
+    /* top: 300px; */
+    bottom: 10px;
+    right: 0; 
     text-align: center;
+    font-size: 13px;
+    transform: translate(150px, 0px);
     /* margin-top: 10%; */
     /* padding: 120px 30px; */
     /* background-color: yellow; */
@@ -283,6 +300,10 @@ body {
   padding: 10px 0px;
 }
 
+.me-auto {
+  /* display: none; */
+}
+
 .nav {
   background: "pink";
   /* position: fixed; */
@@ -296,6 +317,8 @@ body {
   display: flex;
   font-weight: bolder;
   font-size: 20px;
+  text-align: center;
+  justify-content: center;
 }
 
 .upload-img {
@@ -607,7 +630,7 @@ body {
 
 /*Pagination*/
 .pageA {
-  margin-top: 300px;
+  margin-top: 220px;
 }
 
 .pageB {
@@ -628,10 +651,15 @@ NftCard
   flex-direction: column;
   justify-content: flex-end;
   text-align: end;
-  font-size: 14px;
+  font-size: 16px;
   /* background-color: red; */
   position: absolute;
   transform: translate(-11.5rem, -4.3rem);
+  font-weight: bold;
+  /* color: green; */
+  align-items: center;
+  margin-top: 5px;
+  text-shadow: -1px 1px 1px rgb(220, 196, 242);
 }
 
 .nftlist-select-all-button:hover{
@@ -667,6 +695,13 @@ NftCard
 }
 .nftlist-outer {
   margin-top: 4%;
+  margin: auto;
+  width: 60%;
+  background-color: white;
+  padding: 35px 0px;
+  border-radius: 20px;
+  /* background: rgb(174, 164, 164, 0.99); */
+  /* z-index: 3; */
 }
 .stake-box {
   width: 100%;
@@ -678,7 +713,7 @@ NftCard
 .stake-outer-box {
   display: flex;
   /* flex-direction: row; */
-  background-color: lightgray;
+  /* background-color: lightgray; */
   opacity: 0.9;
   width: 100%;
   height: 90%;
@@ -1469,18 +1504,6 @@ th {
 
 /* SliderTest */
 
-/*--------------------------------------------------------------
->>> TABLE OF CONTENTS:
-----------------------------------------------------------------
-1.0 Config
-2.0 General
-3.0 Slider
-4.0 All Tutorials
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-1.0 Config
---------------------------------------------------------------*/
-/*! sanitize.css | CC0 Public Domain | github.com/jonathantneal/sanitize.css */
 pre, textarea {
   overflow: auto;
 }
@@ -1534,13 +1557,6 @@ textarea {
   border-width: 0;
 }
 
-* {
-  font-size: inherit;
-  line-height: inherit;
-  margin: 0;
-  padding: 0;
-}
-
 ::after, ::before {
   text-decoration: inherit;
   vertical-align: inherit;
@@ -1566,18 +1582,13 @@ audio, canvas, iframe, img, svg, video {
   vertical-align: middle;
 }
 
-button, input, select, textarea {
+/* button, input, select, textarea {
   background-color: transparent;
   color: inherit;
-  /* font-family: inherit; */
   font-style: inherit;
   font-weight: inherit;
   min-height: 1.5em;
-}
-
-code, kbd, pre, samp {
-  /* font-family: monospace,monospace; */
-}
+} */
 
 nav ol, nav ul {
   list-style: none;
@@ -1606,12 +1617,12 @@ table {
 }
 
 ::-moz-selection {
-  background-color: #B3D4FC;
+  /* background-color: #B3D4FC; */
   text-shadow: none;
 }
 
 ::selection {
-  background-color: #B3D4FC;
+  /* background-color: #B3D4FC; */
   text-shadow: none;
 }
 
@@ -1836,7 +1847,7 @@ li {
 
 #slide-2:checked ~ .slider__holder .slider__item--1 {
   z-index: 1;
-  transform: translateX(-100px) scale(0.85);
+  transform: translateX(-300px) scale(0.85);
 }
 
 @media (max-width: 768px) {
@@ -1847,7 +1858,7 @@ li {
 
 #slide-1:checked ~ .slider__holder .slider__item--2 {
   z-index: 1;
-  transform: translateX(100px) scale(0.85);
+  transform: translateX(300px) scale(0.85);
 }
 
 @media (max-width: 768px) {
@@ -1924,18 +1935,18 @@ li {
 }
 
 #slide-1:checked ~ .bullets .bullets__item--1 {
-  background: #FFF;
+  /* background: #FFF; */
 }
 
 #slide-2:checked ~ .bullets .bullets__item--2 {
-  background: #FFF;
+  /* background: #FFF; */
 }
 
 .card {
   position: relative;
   display: block;
   border-radius: 8px;
-  background: #FFF;
+  /* background: #FFF; */
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.05), 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -1978,6 +1989,7 @@ li {
   width: 100%;
   opacity: 1;
   cursor: pointer;
+  background: rgb(174, 164, 164, 0.8);
 }
 
 .slider__item-content {
@@ -2024,7 +2036,7 @@ li {
   display: block;
 }
 
-.button {
+/* .button {
   display: inline-block;
   height: 44px;
   padding: 12px 16px;
@@ -2037,6 +2049,6 @@ li {
 
 .button:hover {
   background: rgba(0, 0, 0, 0.1);
-}
+} */
 
 
